asteria/core/tests/errors/elaboration_errors/repeated_term_parameter_in_term_constructor_declaration.asteriacore
data Prod (a : Type) (b : Type) where
   | Pair (x : a) (x : b) : Test$Prod(a,b)
   ;;
